--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "chatbot";
 @import "form_legend_clear";
 @import "navbar";
